--- a/src/assets/styles/blocks/_header.scss
+++ b/src/assets/styles/blocks/_header.scss
@@ -28,8 +28,10 @@
                     background: #EBF2FF;
                     border-radius: 50px;
 
-                    &>img {
-                        width: 25px;
+                    &>a {
+                        &>img {
+                            width: 25px;
+                        }
                     }
                 }
 
@@ -41,18 +43,21 @@
                     background: #EBF2FF;
                     border-radius: 5px;
 
-                    &>img {
-                        width: 20px;
-                    }
-
-                    &>p {
+                    &>a {
+                        width: 100%;
                         font-family: $main-font;
                         font-weight: 400;
                         font-size: 14px;
                         line-height: 16px;
                         display: flex;
                         align-items: center;
+                        justify-content: space-evenly;
                         color: $main-color;
+                        cursor: pointer;
+
+                        &>img {
+                            width: 20px;
+                        }
                     }
                 }
             }
@@ -73,7 +78,8 @@
                 border-radius: 5px;
 
                 &>input {
-                    width: 140px;
+                    width: 86%;
+                    height: 100%;
                     border: none;
                     text-indent: 14px;
                 }
