--- a/src/assets/styles/blocks/_promo.scss
+++ b/src/assets/styles/blocks/_promo.scss
@@ -80,7 +80,6 @@
             &__wholesale {
                 margin-top: 15px;
                 &--text {
-                    font-weight: 400;
                     font-size: 16px;
                     line-height: 19px;
                     color: #626262;
@@ -95,6 +94,9 @@
             }
 
             &__btn {
+                display: flex;
+                align-items: center;
+                justify-content: center;
                 margin-top: 15px;
                 width: 100%;
                 height: 40px;
@@ -104,7 +106,6 @@
                 font-weight: 500;
                 font-size: 18px;
                 line-height: 21px;
-                text-align: center;
                 color: $main-color;
             }
         }
@@ -114,6 +115,165 @@
             width: 100%;
             height: 0px;
             border: 1px solid #EEEEEE;
+        }
+
+        &-size {
+            margin-top: 20px;
+
+            &__name {
+                color: #909090;
+                font-size: 16px;
+            }
+
+            &__items {
+                margin-top: 10px;
+                width: 100%;
+                display: flex;
+                flex-wrap: wrap;
+
+                &--index {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    width: 39px;
+                    height: 39px;
+                    margin-left: 9px;
+                    border: 2px solid #EEEEEE;
+                    border-radius: 5px;
+                    transition: 0.7s;
+                    text-transform: uppercase;
+                    font-size: 16px;
+                }
+
+                &--index:hover {
+                    border: 2px solid $main-color;
+                }
+
+                &--index:first-child {
+                    margin-left: 0;
+                }
+
+                &--index:nth-child(6) {
+                    margin-top: 9px;
+                    margin-left: 0;
+                    width: 50px;
+                }
+
+                &--index:last-child {
+                    margin-top: 9px;
+                    width: 60px;
+                }
+            }
+        }
+
+        &-name {
+            margin-top: 20px;
+
+            &__items {
+                display: flex;
+                width: 100%;
+                justify-content: space-between;
+
+                &--title {
+                    font-weight: 500;
+                    font-size: 20px;
+                    line-height: 23px;
+                    color: #0A0A0A;
+                }
+
+                &--img {
+                    display: flex;
+                    align-items: center;
+                    width: 50px;
+                    height: 50px;
+                    background: #FFFFFF;
+                    border: 2px solid #EEEEEE;
+                    border-radius: 5px;
+
+                    &>img {
+                        object-fit: contain;
+                    }
+                }
+            }
+
+            &__descr {
+                margin-top: 15px;
+                display: flex;
+                flex-direction: column;
+                height: 78.29px;
+                justify-content: space-between;
+
+                &--raiting {
+                    display: flex;
+
+                    .raiting-stars {
+                        width: 87px;
+                        display: flex;
+                        justify-content: space-between;
+
+                        &>img {
+                            width: 14px;
+                        }
+                    }
+
+                    .raiting-text {
+                        margin-left: 5px;
+                        font-weight: 400;
+                        font-size: 16px;
+                        line-height: 19px;
+                        width: 86px;
+                        height: 20.29px;
+                        color: $gray-color;
+                        text-decoration: underline dotted;
+                    }
+                }
+
+                &--code, &--text {
+                    font-size: 16px;
+                    line-height: 19px;
+                    color: $gray-color;
+
+                    &>span {
+                        color: $main-color;
+                    }
+                }
+            }
+        }
+
+        &-information {
+            margin-top: 20px;
+            height: 78px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+
+            &>p:nth-child(1n+1) {
+                display: flex;
+                align-items: center;
+                font-size: 16px;
+                line-height: 19px;
+                color: $gray-color;
+
+                &>span {
+                    margin-left: 5px;
+                    font-size: 16px;
+                    line-height: 19px;
+                    color: #0A0A0A;
+                    text-decoration: underline dotted;
+                }
+
+                &>span:last-child {
+                    margin-left: 5px;
+                    font-size: 16px;
+                    line-height: 19px;
+                    color: #0A0A0A;
+                    text-decoration: none;
+                }
+
+                &>img {
+                    margin-left: 5px;
+                }
+            }
         }
     }
 }
