the last section

--- a/src/assets/styles/blocks/_review.scss
+++ b/src/assets/styles/blocks/_review.scss
@@ -13,6 +13,9 @@
             border-radius: 5px;
 
             &__container {
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
                 width: 90%;
                 height: 266px;
 
@@ -36,14 +39,12 @@
                 }
 
                 .line {
-                    margin-top: 20px;
                     width: 100%;
                     height: 0px;
                     border: 1px solid #EEEEEE;
                 }
 
                 &--bar {
-                    margin-top: 20px;
                     display: flex;
                     flex-direction: column;
                     justify-content: space-between;
@@ -113,7 +114,6 @@
                 }
 
                 &--btn {
-                    margin-top: 20px;
                     display: block;
                     width: 100%;
                     height: 50px;
@@ -126,6 +126,74 @@
                     align-items: center;
                     justify-content: center;
                     color: #FFFFFF;
+                    cursor: pointer;
+                }
+            }
+        }
+
+        &-title {
+            margin-top: 15px;
+            font-weight: 500;
+            font-size: 20px;
+            line-height: 23px;
+            color: #0A0A0A;
+
+            &>span {
+                margin-left: 5px;
+                font-weight: 500;
+                font-size: 20px;
+                line-height: 23px;
+                color: $gray-color;
+            }
+        }
+
+        &>select {
+            margin-top: 10px;
+            width: 290px;
+            height: 40px;
+            border: 2px solid #EEEEEE;
+            border-radius: 3px;
+
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 19px;
+            text-indent: 15px;
+            display: flex;
+            align-items: center;
+            color: $main-color;
+        }
+
+        &-images {
+            margin-top: 25px;
+
+            &__title {
+                font-weight: 400;
+                font-size: 16px;
+                line-height: 19px;
+                color: $gray-color;
+            }
+
+            &__items {
+                margin-top: 10px;
+
+                .review-swiper {
+                    &__slide {
+                        display: flex;
+
+                        .images {
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                            width: 79.14px;
+                            height: 100px;
+                            background: #FAFAFA;
+                            border-radius: 2.6738px;
+
+                            &>img {
+                                width: 100%;
+                            }
+                        }
+                    }
                 }
             }
         }
