--- a/src/assets/styles/blocks/_carouselitem.scss
+++ b/src/assets/styles/blocks/_carouselitem.scss
@@ -1,10 +1,7 @@
 @media (min-width: 320px) {
-    .carousel-track {
-        display: flex;
-    }
-    
     .carousel-item {
         width: 135px;
+        margin-left: 5px;
 
         &__img {
             display: flex;
@@ -60,5 +57,9 @@
                 text-decoration-line: underline;
             }
         }
+    }
+
+    .carousel-item {
+        margin-left: 0;
     }
 }
