desktop layout ready for 30%

--- a/src/assets/styles/blocks/_carousel.scss
+++ b/src/assets/styles/blocks/_carousel.scss
@@ -19,6 +19,7 @@
                 &-slide {
                     margin-right: 0;
                     display: flex;
+                    width: 135px;
                 }
             }
         }
