--- a/src/assets/styles/blocks/_promo.scss
+++ b/src/assets/styles/blocks/_promo.scss
@@ -59,6 +59,14 @@
             z-index: 1;
         }
 
+        &-img__desktop {
+            display: none;
+        }
+
+        &-container {
+            display: block;
+        }
+
         &-descr {
             margin-top: 15px;
             width: 100%;
@@ -121,6 +129,45 @@
             }
         }
 
+        &-color {
+            margin-top: 35px;
+
+            &__name {
+                font-size: 16px;
+                line-height: 19px;
+                color: #626262;
+
+                &>span {
+                    font-size: 16px;
+                    line-height: 19px;
+                    color: #0A0A0A;
+                }
+            }
+
+            &__images {
+                margin-top: 10px;
+                width: 115px;
+                display: flex;
+                justify-content: space-between;
+
+                &--item {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    width: 50px;
+                    height: 50px;
+                    background: #FFFFFF;
+                    border: 2px solid #EEEEEE;
+                    border-radius: 3px; 
+                    transition: 0.5s;                   
+                }
+
+                &--item:hover {
+                    border: 2px solid #2F76FF;
+                }
+            }
+        }
+
         &-line {
             margin-top: 20px;
             width: 100%;
@@ -132,7 +179,7 @@
             margin-top: 20px;
 
             &__name {
-                color: #909090;
+                color: #626262;
                 font-size: 16px;
             }
 
@@ -170,11 +217,41 @@
                     width: 50px;
                 }
 
+                @media (min-width: 335px) {
+                    &--index:nth-child(6) {
+                        margin-left: 4px;
+                    }
+                }
+
+                @media (min-width: 339px) {
+                    &--index:nth-child(6) {
+                        margin-left: 5px;
+                        margin-top: 0;
+                    }
+                }
+
                 &--index:last-child {
                     margin-top: 9px;
                     width: 60px;
                 }
+
+                @media (min-width: 340px) {
+                    &--index:last-child {
+                        margin-left: 4px;
+                    }
+                }
+
+                @media (min-width: 408px) {
+                    &--index:last-child {
+                        margin-left: 4px;
+                        margin-top: 0;
+                    }
+                }
             }
+        }
+
+        &-counter {
+            display: none;
         }
 
         &-name {
@@ -283,6 +360,132 @@
 
                 &>img {
                     margin-left: 5px;
+                }
+            }
+        }
+    }
+}
+
+@media (min-width: 1024px) {
+    .promo {
+        margin-top: 27px;
+
+        &-img, &-back, &-like {
+            display: none;
+        }
+
+        &-container {
+            display: flex;
+
+            .promo-img__desktop {
+                display: flex;
+    
+                &--column {
+                    display: flex;
+                    flex-direction: column;
+    
+                    .column-img {
+                        margin-top: 5px;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        width: 51px;
+                        height: 63px;
+                        border: 2px solid #EEEEEE;
+                        border-radius: 5px;
+                        
+                        &>img {
+                            width: 47px;
+                            border-radius: 5px;
+                        }
+                    }
+    
+                    .column-img:first-child {
+                        margin-top: 0;
+                    }
+                }
+    
+                &--main {
+                    margin-left: 10px;
+                    width: 328px;
+                    background: #EEEEEE;
+                    border: 2px solid #EEEEEE;
+                    border-radius: 5px;
+    
+                    &>img {
+                        width: 100%;
+                        border-radius: 5px;
+                    }
+                }
+            }
+
+            .promo-descr, .promo-line, .promo-name, .promo-information {
+                display: none;
+            }
+
+            .promo-descr-desktop {
+                margin-left: 24px;
+                .promo-color {
+                    margin-top: 0;
+                }
+
+                .promo-size {
+                    &__items {
+                        width: 70%;
+
+                        &--index:nth-child(6) {
+                            margin-left: 0;
+                            margin-top: 9px;
+                        }
+
+                        &--index:last-child {
+                            margin-top: 9px;
+                        }
+                    } 
+                }
+
+                .promo-counter {
+                    margin-top: 18px;
+                    display: block;
+
+                    &__title {
+                        font-size: 16px;
+                        line-height: 19px;
+                        color: #626262;
+                    }
+
+                    &__elements {
+                        margin-top: 5px;
+                        display: flex;
+                        align-items: center;
+
+                        .counter {
+                            display: flex;
+                            justify-content: space-between;
+                            align-items: center;
+                            width: 100px;
+                            height: 35px;
+                            border: 2px solid #EEEEEE;
+                            border-radius: 5px;
+
+                            .minus, .plus {
+                                height: 100%;
+                                width: 30%;
+                                border: none;
+                                background: none;
+                                color: $gray-color;
+                                font-size: 18px;
+                                cursor: pointer;
+                            }
+                        }
+
+                        .amount {
+                            margin-left: 10px;
+                            font-size: 14px;
+                            line-height: 16px;
+                            color: #626262;
+                        }
+                    }
                 }
             }
         }
