--- a/src/assets/styles/blocks/_review.scss
+++ b/src/assets/styles/blocks/_review.scss
@@ -295,7 +295,7 @@
                         &__images {
                             margin-top: 15px;
                             display: flex;
-                            width: 100%;
+                            width: 290px;
                             justify-content: space-between;
 
                             &--item {
