--- a/src/assets/styles/blocks/_header.scss
+++ b/src/assets/styles/blocks/_header.scss
@@ -63,9 +63,21 @@
             }
         }
 
+        &-nav--desk {
+            display: none;
+        }
+
         &-search {
             margin-top: 15px;
             position: relative;
+
+            &__logo {
+                display: none;
+            }
+
+            &__btn {
+                display: none;
+            }
 
             &__form {
                 display: flex;
@@ -74,7 +86,7 @@
                 width: 100%;
                 height: 39px;
                 background: #FFFFFF;
-                border: 2px solid #2F76FF;
+                border: 2px solid $main-color;
                 border-radius: 5px;
 
                 &>input {
@@ -88,12 +100,14 @@
                     position: absolute;
                     display: flex;
                     justify-content: space-evenly;
+                    text-indent: 10px;
                     width: 101px;
                     height: 31px;
                     right: 49px;
                     background: #EBF2FF;
                     border-radius: 5px;
                     border: none;
+                    -webkit-appearance: none;
                 }
 
                 &--btn {
@@ -102,8 +116,106 @@
                     justify-content: center;
                     width: 45px;
                     height: 100%;
-                    background: #2F76FF;
+                    background: $main-color;
                     border-radius: 0px 2px 2px 0px;
+
+                    &>a {
+                        display: none;
+                    }
+                }
+            }
+            &__list {
+                display: none;
+            }
+        }
+    }
+}
+
+@media (min-width: 1024px) {
+    .header {
+        &-nav {
+            display: none;
+        }
+
+        &-nav--desk {
+            padding-top: 10px;
+            display: flex;
+            justify-content: end;
+
+            &__list {
+                display: flex;
+                width: 350px;
+                justify-content: space-between;
+
+                &-link {
+                    &>a {
+                        font-size: 14px;
+                        line-height: 16px;
+                        color: #0A0A0A;
+                    }
+                }
+            }
+        }
+
+        &-search {
+            display: flex;
+            width: 100%;
+            justify-content: space-between;
+            align-items: center;
+
+            &__logo {
+                display: block;
+            }
+
+            &__btn {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                width: 75px;
+                height: 39px;
+                background: $main-color;
+                border-radius: 5px;
+            }
+
+            &__form {
+                width: 400px;
+
+                &>select {
+                    position: inherit;
+                    margin-right: 4px;
+                }
+
+                &--btn {
+                    width: 96px;
+                    justify-content: space-evenly;
+
+                    &>a {
+                        display: block;
+                        margin-top: 2px;
+                        font-size: 12px;
+                        line-height: 14px;
+                        color: #EBF2FF;
+                    }
+                }
+            }
+
+            &__list {
+                display: flex;
+                width: 200px;
+                justify-content: space-between;
+                align-items: baseline;
+
+                &--item {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+
+                    &>a {
+                        margin-top: 2px;
+                        font-size: 12px;
+                        line-height: 14px;
+                        color: #0A0A0A;
+                    }
                 }
             }
         }
