--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,9 +1,11 @@
 @import './blocks/header';
+@import './blocks/subheader';
 @import './blocks/promo';
 @import './blocks/description';
 @import './blocks/carousel';
 @import './blocks/carouselitem';
 @import './blocks/review';
+@import './blocks/footer';
 
 @import './base.scss';
 
@@ -38,6 +40,13 @@ a {
         padding-left: 15px;
         padding-right: 15px;
         margin: auto;
+    }
+}
+
+@media (min-width: 1024px) {
+    .container {
+        padding-left: 49px;
+        padding-right: 49px;
     }
 }
 
