--- a/src/assets/styles/blocks/_carousel.scss
+++ b/src/assets/styles/blocks/_carousel.scss
@@ -12,14 +12,38 @@
         &-container {
             width: 100%;
             margin-top: 15px;
+            position: relative;
+
+            .prev {
+                position: absolute;
+                background: black;
+                width: 20px;
+                height: 20px;
+                left: 0;
+                z-index: 2;
+            }
+
+            .next {
+                position: absolute;
+                background: black;
+                width: 20px;
+                height: 20px;
+                right: 0;
+                z-index: 2;
+            }
 
             .swiper {
                 overflow: auto;
                 
                 &-slide {
-                    margin-right: 0;
-                    display: flex;
-                    width: 135px;
+                    margin-right: unset;
+                    max-width: 135px;
+                    margin-left: 0;
+
+                }
+
+                &-slide:first-child {
+                    margin-left: 0;
                 }
             }
         }
@@ -29,6 +53,16 @@
             width: 100%;
             height: 0px;
             border: 1px solid #EEEEEE;
+        }
+    }
+}
+
+@media (min-width: 1024px) {
+    .carousel {
+        margin-top: 75px;
+
+        &-title {
+            font-size: 28px;
         }
     }
 }
