--- a/src/assets/styles/blocks/_review.scss
+++ b/src/assets/styles/blocks/_review.scss
@@ -153,6 +153,7 @@
             height: 40px;
             border: 2px solid #EEEEEE;
             border-radius: 3px;
+            -webkit-appearance: none;
 
             font-weight: 500;
             font-size: 16px;
