--- a/src/assets/styles/blocks/_carouselitem.scss
+++ b/src/assets/styles/blocks/_carouselitem.scss
@@ -99,6 +99,37 @@
         &__img {
             width: 100%;
             height: 225px;
+
+            &>img {
+                width: 80%;
+                height: 70%;
+            }
+
+            &--sale, &--favorite {
+                display: none;
+            }
+        }
+
+        &__descr {
+            &--price {
+                font-weight: 700;
+                font-size: 22px;
+                line-height: 22px;
+                color: #0A0A0A;
+
+                &>span {
+                    display: none;
+                }
+            }
+
+            &--text {
+                font-size: 16px;
+                line-height: 19px;
+            }
+
+            &--link {
+                display: none;
+            }
         }
     }
 }
