--- a/src/assets/styles/blocks/_review.scss
+++ b/src/assets/styles/blocks/_review.scss
@@ -131,6 +131,25 @@
             }
         }
 
+        &-title-box {
+            &>select {
+                margin-top: 10px;
+                width: 100%;
+                height: 40px;
+                border: 2px solid #EEEEEE;
+                border-radius: 3px;
+                -webkit-appearance: none;
+    
+                font-weight: 500;
+                font-size: 16px;
+                line-height: 19px;
+                text-indent: 15px;
+                display: flex;
+                align-items: center;
+                color: $main-color;
+            }
+        }
+
         &-title {
             margin-top: 15px;
             font-weight: 500;
@@ -147,23 +166,6 @@
             }
         }
 
-        &>select {
-            margin-top: 10px;
-            width: 100%;
-            height: 40px;
-            border: 2px solid #EEEEEE;
-            border-radius: 3px;
-            -webkit-appearance: none;
-
-            font-weight: 500;
-            font-size: 16px;
-            line-height: 19px;
-            text-indent: 15px;
-            display: flex;
-            align-items: center;
-            color: $main-color;
-        }
-
         &-images {
             margin-top: 25px;
 
@@ -176,6 +178,7 @@
 
             &__items {
                 margin-top: 10px;
+                width: 100%;
 
                 .review-swiper {
                     &__slide {
@@ -185,8 +188,8 @@
                             display: flex;
                             justify-content: center;
                             align-items: center;
-                            width: 79.14px;
-                            height: 100px;
+                            width: 100%;
+                            height: 100%;
                             background: #FAFAFA;
                             border-radius: 2.6738px;
 
@@ -314,8 +317,82 @@
                                 }
                             }
                         }
+
+                        &__reactions {
+                            margin-top: 15px;
+                            width: 103px;
+                            display: flex;
+                            justify-content: space-between;
+
+                            &--like, &--dislike {
+                                display: flex;
+                                align-items: center;
+                                justify-content: space-evenly;
+                                width: 50px;
+                                height: 29px;
+                                background: #FAFAFA;
+                                border-radius: 5px;
+                                border: none;
+
+                                &>span {
+                                    font-size: 16px;
+                                    line-height: 19px;
+                                    color: $gray-color;
+                                }
+                            }
+                        }
                     }
                 }
+            }
+        }
+    }
+}
+
+@media (min-width: 1024px) {
+    .review {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row-reverse;
+
+        &-box {
+            width: 300px;
+            height: 309px;
+        }
+
+        &-comments__block {
+            display: block;
+            width: 550px;
+        }
+
+        &-title-box {
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+
+            &>select {
+                margin-top: 10px;
+                width: 200px;
+                height: 40px;
+                border: 2px solid #EEEEEE;
+                border-radius: 3px;
+                -webkit-appearance: none;
+
+                font-weight: 500;
+                font-size: 16px;
+                line-height: 19px;
+                text-indent: 15px;
+                display: flex;
+                align-items: center;
+                color: $main-color;
+            }
+        }
+
+        &-title {
+            font-size: 28px;
+
+            &>span {
+                font-size: 28px;
             }
         }
     }
